# foxhole-mapmaker

./: .gitignore  Cargo.toml  Readme.md  config.example.json5
data/warapi-responses/: Readme.md
data/warapi-responses/able-127/: maps.json  war.json
data/warapi-responses/able-127/maps/: AcrithiaHex-dynamic.json.json  AcrithiaHex-static.json.json  AllodsBightHex-dynamic.json.json  AllodsBightHex-static.json.json  AshFieldsHex-dynamic.json.json  AshFieldsHex-static.json.json  BasinSionnachHex-dynamic.json.json  BasinSionnachHex-static.json.json  CallahansPassageHex-dynamic.json.json  CallahansPassageHex-static.json.json  CallumsCapeHex-dynamic.json.json  CallumsCapeHex-static.json.json  ClahstraHex-dynamic.json.json  ClahstraHex-static.json.json  ClansheadValleyHex-dynamic.json.json  ClansheadValleyHex-static.json.json  DeadLandsHex-dynamic.json.json  DeadLandsHex-static.json.json  DrownedValeHex-dynamic.json.json  DrownedValeHex-static.json.json  EndlessShoreHex-dynamic.json.json  EndlessShoreHex-static.json.json  FarranacCoastHex-dynamic.json.json  FarranacCoastHex-static.json.json  FishermansRowHex-dynamic.json.json  FishermansRowHex-static.json.json  GodcroftsHex-dynamic.json.json  GodcroftsHex-static.json.json  GreatMarchHex-dynamic.json.json  GreatMarchHex-static.json.json  HeartlandsHex-dynamic.json.json  HeartlandsHex-static.json.json  HowlCountyHex-dynamic.json.json  HowlCountyHex-static.json.json  KalokaiHex-dynamic.json.json  KalokaiHex-static.json.json  (+50 more)
data/warapi-responses/able-128-warstart/: maps.json  war.json
src/: main.rs  warapi_schema.rs
(+87 files in other folders)
