[package]
name = "mapmaker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.20"
chrono = { version = "0.4.42", default-features = false, features = ["now"] }
env_logger = "0.11.8"
image = { version = "0.25.8", default-features = false, features = ["png", "tga"] }
json5 = "0.4.1"
log = "0.4.28"
ordered-float = "5.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
svg = "0.18.0"
ureq = "3.1.2"
